--- a/pom.xml
+++ b/pom.xml
@@ -25,10 +25,6 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
-		<repository>
-			<id> xuggle </id>
-			<url> http://www.dcm4che.org/maven2/ </url>
-		</repository>
 	</repositories>
 
 	<dependencies>
@@ -44,29 +40,14 @@
 			<version>0.49.0-alpha</version>
 		</dependency>
 		<dependency>
-			<groupId>edu.cmu.sphinx</groupId>
-			<artifactId>sphinx4-core</artifactId>
-			<version>5prealpha-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>edu.cmu.sphinx</groupId>
-			<artifactId>sphinx4-data</artifactId>
-			<version>5prealpha-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>xuggle</groupId>
-			<artifactId>xuggle-xuggler</artifactId>
-			<version>5.4</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-			<version>1.7.7</version>
-		</dependency>
-		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-text</artifactId>
 			<version>1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>3.10.0</version>
 		</dependency>
 	</dependencies>
 </project>
